# minion_ws

./: test.txt
log/: latest_list
src/ld08_driver/launch/: ld08.launch.py
src/minion_bringup/: CMakeLists.txt  package.xml
src/minion_bringup/config/: m1_hardware_controller_manager.yaml
src/minion_bringup/launch/: m1_base.launch.py  m1_hardware.launch.py
src/minion_description/: CMakeLists.txt  package.xml
src/minion_description/gazebo/: open_manipulator_x.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro
src/minion_description/launch/: model.launch.py
src/minion_description/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
src/minion_description/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
